# python-stripzip

./: .gitignore  .travis.yml  LICENCE.md  README.rst  pyproject.toml  setup.py  stripzip.py  test_stripzip.py
.github/workflows/: ci.yml  publish.yml
